--- a/gradle/groovyProject.gradle
+++ b/gradle/groovyProject.gradle
@@ -46,7 +46,7 @@ testTasks.all { task ->
 jarTasks.all { jar ->
     jar.manifest.mainAttributes(
         (Attributes.Name.IMPLEMENTATION_TITLE.toString()): 'Gradle',
-        (Attributes.Name.IMPLEMENTATION_VERSION.toString()): version,
+        (Attributes.Name.IMPLEMENTATION_VERSION.toString()): versionBase
     )
 }
 
